# vpp-api

./: .rustfmt.toml  Cargo.toml  README.md  build.rs  generated.rs
.github/workflows/: run-on-push.yml  rust.yml
code-templates/examples/: progressive-vpp.rs
code-templates/src/: reqrecv.rs
code-templates/tests/: interface-test.rs
examples/: .vhost-example.rs.un~  vhost-example.rs  vpp-api-encoding-test.rs  vpp-api-interface-test.rs  vpp-api-vpe-binding.rs  vpp-api-vpe-test.rs
src/: .lib.rs.un~  .typ.rs.un~  MessageFunctions.rs  abf.rs  acl.rs  acl_types.rs  adl.rs  af_packet.rs  alias.rs  arp.rs  avf.rs  basetypes.rs  bfd.rs  bier.rs  bond.rs  builtinurl.rs  cdp.rs  classify.rs  cnat.rs  code_gen.rs  cop.rs  crypto.rs  crypto_sw_scheduler.rs  ct6.rs  det44.rs  dhcp.rs  dhcp6_ia_na_client_cp.rs  dhcp6_pd_client_cp.rs  dns.rs  dslite.rs  enums.rs  ethernet_types.rs  feature.rs  fib_types.rs  file_schema.rs  flow.rs  flow_types.rs  flowprobe.rs  gbp.rs  generated.rs  (+102 more)
src/core/: af_packet.api.rs  arp.api.rs  bfd.api.rs  bier.api.rs  bond.api.rs  classify.api.rs  cop.api.rs  crypto.api.rs  ethernet_types.api.rs  feature.api.rs  fib_types.api.rs  flow.api.rs  flow_types.api.rs  gre.api.rs  gso.api.rs  interface.api copy.rs  interface.api.rs  interface_types.api.rs  ip.api.rs  ip6_nd.api.rs  ip_neighbor.api.rs  ip_types.api.rs  ipfix_export.api.rs  ipip.api.rs  ipsec.api.rs  ipsec_types.api.rs  l2.api.rs  memclnt.api.rs  mfib_types.api.rs  mpls.api.rs  p2p_ethernet.api.rs  pci_types.api.rs  pg.api.rs  pipe.api.rs  policer.api.rs  policer_types.api.rs  punt.api.rs  qos.api.rs  rd_cp.api.rs  session.api.rs  (+19 more)
src/plugins/: abf.api.rs  acl.api.rs  acl_types.api.rs  adl.api.rs  avf.api.rs  builtinurl.api.rs  cdp.api.rs  cnat.api.rs  crypto_sw_scheduler.api.rs  ct6.api.rs  det44.api.rs  dhcp.api.rs  dhcp6_ia_na_client_cp.api.rs  dhcp6_pd_client_cp.api.rs  dns.api.rs  dslite.api.rs  flowprobe.api.rs  gbp.api.rs  geneve.api.rs  graph.api.rs  gtpu.api.rs  http_static.api.rs  igmp.api.rs  ikev2.api.rs  ikev2_types.api.rs  ioam_cache.api.rs  ioam_export.api.rs  ioam_vxlan_gpe.api.rs  l2e.api.rs  l2tp.api.rs  l3xc.api.rs  lacp.api.rs  lb.api.rs  lb_types.api.rs  lcp.api.rs  lisp.api.rs  lisp_gpe.api.rs  lisp_types.api.rs  lldp.api.rs  mactime.api.rs  (+27 more)
tests/: .message-test.rs.un~  interface-test.rs  message-test.rs  progress.rs  unit-test.rs
vpp-api-encoding/: Cargo.toml
vpp-api-encoding/src/: typ.rs
vpp-api-gen/: Cargo.toml  README.md  acl.api.json
vpp-api-gen/.github/workflows/: rust.yml
vpp-api-gen/code-templates/examples/: progressive-vpp.rs
vpp-api-gen/code-templates/tests/: interface-test.rs
vpp-api-macros/: Cargo.toml
vpp-api-macros/src/: lib.rs
vpp-api-macros/tests/: progress.rs  unit-test.rs
vpp-api-message/: Cargo.toml  README.md
vpp-api-message/src/: lib.rs
vpp-api-transport/: Cargo.toml
vpp-api-transport/src/: error.rs  lib.rs  reqrecv.rs
(+160 files in other folders)
