[package]
name = "vpp-api-encoding"
version = "0.1.0"
authors = ["Andrew Yourtchenko <ayourtch@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
vpp-api-transport = "0.1.1"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
minreq = { version = "2.3.0", features = ["https-rustls", "json-using-serde"] }
clap = "3.0.0-beta.2"
typenum = "*"
generic-array = { version = "*", features = ["serde"] }
bincode = "1.2.1"
serde_repr = "0.1"


