[package]
name = "vpp-api-encoding"
version = "0.1.0"
authors = ["Andrew Yourtchenko <ayourtch@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
log = "0.4.14"
serde_json = "1.0"
serde_yaml = "0.8"
minreq = { version = "2.3.0", features = ["https-rustls", "json-using-serde"] }
clap = { version = "3.0.0", features = ["derive"] }
typenum = "*"
generic-array = { version = "*", features = ["serde"] }
bincode = "1.2.1"
serde_repr = "0.1"


